--- a/Image Classifier Visualization and Documentation.ipynb
+++ b/Image Classifier Visualization and Documentation.ipynb
@@ -10,6 +10,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7033e4cc",
+   "metadata": {},
+   "source": [
+    "## Abstract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4671425",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "19bb51b3",
    "metadata": {},
    "source": [
@@ -221,6 +237,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec9a4dc4",
+   "metadata": {},
+   "source": [
+    "For structuring element B and set X, for:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5806691a",
+   "metadata": {},
+   "source": [
+    "Erosion define as:\n",
+    "<br>\n",
+    "$ \\large \\varepsilon_B(X) = { x | B_x \\subseteq X}  $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6dc1409",
+   "metadata": {},
+   "source": [
+    "Dilation define as:\n",
+    "<br>\n",
+    "$ \\large \\delta_B(X) = { x | B_x \\cap X \\neq \\emptyset}  $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "246d1268",
+   "metadata": {},
+   "source": [
+    "Closing of image f is defined as:\n",
+    "<br>\n",
+    "$ \\large  \\oslash_B(f) = \\varepsilon_{\\breve{B}}[\\delta_B(X)] $"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "b6067ae3",
@@ -329,12 +383,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b25e82a",
+   "cell_type": "markdown",
+   "id": "da87f186",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a65cb57",
+   "metadata": {},
+   "source": [
+    "Pierre Soile, Morphological Image Analysis\n",
+    "Principles and Applications: https://link.springer.com/book/10.1007/978-3-662-03939-7"
+   ]
   }
  ],
  "metadata": {
