with the abstract

--- a/Image Classifier Visualization and Documentation.ipynb
+++ b/Image Classifier Visualization and Documentation.ipynb
@@ -17,12 +17,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4671425",
+   "cell_type": "markdown",
+   "id": "d52545ff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In the current project, I used open source Machine Learning libraries to build, train and compare two digit classifiers, Naive Bayes Classifier and Convolutional Neural Network. Digits are numbers from 0 to 9 accessible in MNIST dataset from the TensorFlow module. Test images are generated with NumPy and Scikit-Image modules"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1457,8 +1457,8 @@
    "id": "a7d3aab7",
    "metadata": {},
    "source": [
-    "We created two models, one basic statistical approach and one convolutial neural approach, CNN is performing vast better, however cannot deal with augmented images.\n",
-    "One idea for imporvment is creating new dataset with augmented pictures what supposed to cause insensitive for colours model"
+    "I presented two models, one basic statistical approach and one convolutial neural approach, CNN is performing vast better, however cannot deal with augmented images.\n",
+    "Idea for the model imporvment is creating new dataset with augmented pictures, what supposed to cause less insensitive for colours model."
    ]
   },
   {
